# DP-for-opt-pricing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: quickstart.sh
notebooks/: american_option_falkon.ipynb
scripts/: train.py
src/dp_opt_pricing/: cli.py  config.py  gbm.py  hindsight.py  model.py  payoffs.py  plotting.py  training.py
tests/: test_import.py
